# IronSmith

./: .ironsmith_recents  LICENSE  README.md  big_cone.irsm  cone9.irsm  cube2.irsm  cube_10  cup.irsm  demo copy.irsm  demo.irsm  ironsmith.cabal  output.glsl  sphere5.irsm  test.irsm  untitled.irsm
IronSmith-Viewer/: Cargo.toml  output.glsl
IronSmith-Viewer/src/: camera.rs  core.glsl  main.rs  network.rs  renderer.rs  shader.rs
app/: main.hs
src/: AST.hs  AppCore.hs  AppEvents.hs  AppState.hs  AppUi.hs  Evaluator.hs  Evaluator_OBJ_Version.hs  Parser.hs
