cabal-version:      2.4
name:               ironsmith
version:            0.1.0.0
synopsis:           A 3D modeling scripting language
author:             The IronSmith Forge
maintainer:         user@example.com

executable ironsmith
    
    main-is:          Main.hs
    
    other-modules:    AST, 
                      Parser, 
                      Evaluator
                      
    hs-source-dirs:   app, src
    
    default-language: Haskell2010
    
    build-depends:    base >= 4.14 && < 5,
                      megaparsec,
                      text,
                      containers,
                      parser-combinators